<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    android:orientation="vertical" >

    <Button
        android:id="@+id/btn_menu_sina"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/btn_alert"
        android:gravity="center"
        android:text="@string/sShare_sina"
        android:textColor="#000000"
        android:textSize="16sp" />

    <Button
        android:id="@+id/btn_menu_wechat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:background="@drawable/btn_alert"
        android:gravity="center"
        android:text="@string/sShare_wechat"
        android:textColor="#000000"
        android:textSize="16sp" />

    <Button
        android:id="@+id/btn_cancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/btn_alert_black"
        android:gravity="center"
        android:text="@string/sShare_cancel"
        android:textColor="#000000"
        android:textSize="16sp" />

</LinearLayout>