<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/common_bg_"
    android:paddingBottom="@dimen/common_vg_baseVerticalPadding"
    android:paddingLeft="@dimen/common_vg_baseHorizontalPadding"
    android:paddingRight="@dimen/common_vg_baseHorizontalPadding"
    android:paddingTop="@dimen/common_vg_baseVerticalPadding" >
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="6dp"
        android:layout_marginLeft="6dp"
        android:text="@string/sPublish_tv_canNotFindShop"
        android:textColor="#79a095"
        android:textSize="11sp" />
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/common__vg_bg__input"
        android:orientation="vertical"
        android:paddingBottom="1dp"
        android:paddingLeft="6dp"
        android:paddingRight="6dp"
        android:paddingTop="1dp" >

        <RelativeLayout
            android:id="@+id/sPublish_vg_fullName"
            android:layout_width="match_parent"
            android:layout_height="42dp" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="12dp"
                android:clickable="false"
                android:text="@string/sPublish_tv_fullName"
                android:textColor="#333333"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/sPublish_et_fullName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="2dp"
                android:background="@null"
                android:hint="@string/sPublish_et_hintEnterShopFullName"
                android:maxWidth="230dp"
                android:singleLine="true"
                android:textSize="12sp" >

                <requestFocus />
            </EditText>

        </RelativeLayout>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:contentDescription="@null"
            android:src="@drawable/common__iv__dotted_line" />

        <RelativeLayout
            android:id="@+id/sPublish_vg_address"
            android:layout_width="match_parent"
            android:layout_height="42dp" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="12dp"
                android:clickable="false"
                android:text="@string/sPublish_tv_address"
                android:textColor="#333333"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/sPublish_et_address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="2dp"
                android:background="@null"
                android:hint="@string/sPublish_et_hintEnterShopAddress"
                android:maxWidth="230dp"
                android:singleLine="true"
                android:textSize="12sp" />

        </RelativeLayout>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:contentDescription="@null"
            android:src="@drawable/common__iv__dotted_line" />

        <RelativeLayout
            android:id="@+id/sPublish_vg_phoneNum"
            android:layout_width="match_parent"
            android:layout_height="42dp" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="12dp"
                android:clickable="false"
                android:text="@string/sPublish_tv_phoneNum"
                android:textColor="#333333"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/sPublish_et_phoneNum"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="2dp"
                android:background="@null"
                android:hint="@string/sPublish_et_hintEnterShopPhoneNum"
                android:inputType="phone"
                android:maxWidth="230dp"
                android:singleLine="true"
                android:textSize="12sp" />

        </RelativeLayout>
    </LinearLayout>

</LinearLayout>
